hdone/objects/ArchiveSchedule__c.object
<CustomObject>
    <description>Archived Schedules for Analytic Snapshots of schedule info</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>From Address lookup object</description>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>From Address lookup object</description>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Site_Name__c</fullName>
        <description>From Address lookup object</description>
        <label>Address Site Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>From Address lookup object</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Schedule comments</description>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <description>Day of week from initial schedule</description>
        <label>DayOfWeek</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Ending date for schedule item</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Ending time from schedule item</description>
        <label>End Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <description>Last modified date for original item</description>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Provider_External_Id__c</fullName>
        <description>External Id for provider, if any</description>
        <label>Provider External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <description>Full name of provider from lookup record</description>
        <label>Provider Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Time__c</fullName>
        <description>Execution time for snapshot</description>
        <label>Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Starting date for schedule item</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Starting time for schedule item</description>
        <label>Start Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>From Address lookup object</description>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Schedule status</description>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>From Address lookup object</description>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>ArchiveSchedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ArchiveSchedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArchiveSchedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>